<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.aske.multiconsole.ui.FormActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/EditFormTitulo"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_titulo"
        android:layout_width="fill_parent">
    </EditText>
    <EditText
        android:id="@+id/EditFormDescripcion"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="4"
        android:hint="@string/hint_descripcion"
        android:layout_width="fill_parent">
    </EditText>
    <EditText
        android:id="@+id/EditFormCompania"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_compania"
        android:layout_width="fill_parent">
    </EditText>
    <EditText
        android:id="@+id/EditFormFecha"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_fecha"
        android:layout_width="fill_parent">
    </EditText>
    <EditText
        android:id="@+id/EditFormPlataforma"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_plataforma"
        android:layout_width="fill_parent">
    </EditText>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:backgroundTint="#333333"
        android:src="@android:drawable/ic_menu_save" />

</android.support.design.widget.CoordinatorLayout>